--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 lxml==4.9.2
 MarkupSafe==2.1.2
 premailer==3.10.0
+python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 schedule==1.2.0
