--- a/frontend/bagel_app/package.json
+++ b/frontend/bagel_app/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "bulma-form": "^0.2.0",
     "bulma-react-components": "^1.0.2",
+    "crypto-browserify": "^3.12.0",
     "gsap": "^3.11.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-device-detect": "^2.2.3",
@@ -22,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-stripe": "^0.1.0",
     "react-stripe-js": "^1.1.5",
+    "stream-browserify": "^3.0.0",
     "stripe": "^12.6.0",
     "three": "^0.152.2",
     "web-vitals": "^2.1.4"
